Fix followers popout spacing

--- a/frontend/src/css/components/feed.scss
+++ b/frontend/src/css/components/feed.scss
@@ -384,7 +384,7 @@
                                 background-color: $off-white;
                                 border: 2px solid $dark-gray;
                                 border-radius: 5px;
-                                z-index: 2;
+                                z-index: 5;
                                 width: 150px;
                                 max-width: 150px;
                                 max-height: 500px;
