--- a/frontend/src/css/components/profile.scss
+++ b/frontend/src/css/components/profile.scss
@@ -121,12 +121,16 @@
                 .followers {
                     cursor: pointer;
                 }
+
+                .inner-profile-item {
+                    padding: 4px 4px 4px 0px;
+                }
             }
+
             .follower-popout-container {
                 position: absolute;
                 top: 142px;
-                right: 30px;
-                padding: 5px;
+                right: 38px;
                 background-color: $off-white;
                 border: 2px solid $dark-gray;
                 border-radius: 5px;
@@ -160,9 +164,7 @@
                         font-family: $serif;
                         font-size: 14px;
                         width: 220px;
-                        height: 28px;
-                        margin-left: -5px;
-                        margin-bottom: 1px;
+                        box-sizing: border-box;
                     }
                     
                     .popout-item:hover {
@@ -172,9 +174,7 @@
                 }
             }
             
-            div {
-                padding: 4px 4px 4px 0px;
-            }
+            
             .profile-edit-button {
                 
                 padding-bottom: 4px;
@@ -245,7 +245,6 @@
                     position: absolute;
                     top: 146px;
                     right: 55px;
-                    padding: 5px;
                     background-color: $off-white;
                     border: 2px solid $dark-gray;
                     border-radius: 5px;
@@ -262,20 +261,12 @@
                     .likes-popout-inner-container {
                         position: relative;
 
-                        .close-popout-btn {
-                            position: absolute;
-                            top: 0px;
-                            right: 0px;
-                        }
-
                         .popout-item,
                         .popout-item-none {
                             color: $dark-gray;
                             font-family: $serif;
                             font-size: 14px;
                             width: 220px;
-                            margin-left: -5px;
-                            height: 30px;
                             box-sizing: border-box;
                         }
                         
